# GeneralNelderMeadSolver

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/neldermead/: neldermead.h
test/: neldermead.cpp
